<resources>
    <string name="app_name">HelpU</string>
    <string name="general_error">Something went wrong</string>
    <string name="description">Description</string>
    <string name="services_rates">Services and Rates</string>
    <string name="hire_this_worker">Hire this worker</string>
    <string name="service_type">Service Type</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="book_now">Book Now</string>
    <string name="message">Message</string>
    <string name="message_hint">ex. More details, Special Instruction, etc</string>
    <string name="waiting_for_confirmation_from_the_worker">Waiting for Confirmation from the worker</string>
    <string name="please_wait_until_the_confirmation">Please wait until the confirmation.</string>
    <string name="average_confirmation_time">Average confirmation will take 10 – 30 minutes.</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="contact_worker_instruction">Please contact your worker to be sure you are on the same page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking_requests">Booking Requests</string>
    <string name="status_requested">REQUESTED</string>
    <string name="per_session_is_approximately_1_day">* per session is approximately 6 – 8 hours</string>
    <string name="ok">OK</string>
    <string name="house_cleaning_description">House Cleaning involves getting rid of mess, trash, dirt through sweeping, mopping and dusting</string>
    <string name="definition">Definition</string>
</resources>
