<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:cardCornerRadius="3dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    style="@style/TextSectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_type" />

                <Spinner
                    android:id="@+id/spinner_skills"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="#D5D5D5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button_date"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_today_black_24dp" />

                    <TextView
                        android:id="@+id/textView_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/date" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="#D5D5D5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button_time"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_access_time_black_24dp" />

                    <TextView
                        android:id="@+id/textView_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/time" />
                </LinearLayout>

                <TextView
                    style="@style/TextSectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/message" />

                <EditText
                    android:id="@+id/editText_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_hint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/per_session_is_approximately_1_day"
                    android:textStyle="italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_book"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_now"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>
