<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:cardCornerRadius="3dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView_worker"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="top"
                        android:layout_marginEnd="12dp"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="2dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:id="@+id/layout_credentials"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    style="@style/TextSectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp" />

                <TextView
                    style="@style/TextSectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/services_rates" />

                <LinearLayout
                    android:id="@+id/layout_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>
        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_hire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:enabled="false"
            android:text="@string/hire_this_worker"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent" />
    </FrameLayout>
</android.support.v7.widget.CardView>
